Fri Mar 17 20:27:41 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Eliminate duplicate of config/pre.in.

Tue Mar 7 21:40:18 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed library name for the PC.

Tue Mar  7 19:54:32 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS, ISODE_INCLUDE.

Tue Mar 7 12:33:29 1995 Keith Vetter (keithv@fusion.com)

	* rc_io.c: moved the enabling defines for low-level io, e.g. read,
           write, lseek, etc., out of here and into k5-config.h.

Thu Mar 2 11:55:00 1995 Keith Vetter (keithv@fusion.com)

	* rc_io.c: changed NEED_WINSOCK_H to NEED_SOCKETS

Wed Mar 1 12:03:30 1995 Keith Vetter (keithv@fusion.com)

	* *.c, *.h Added windows INTERFACE keyword
	* Makefile.in: made to work on the PC.
        * rc_dfl.c: Some int/long changes for the PC
        * rc_io.c: hack to get Microsoft C in std-c mode to allow
           low-level i/o routines. Probably not a permanent solution
           but keep until we decide on a better method.
        * rc_io.h: added 2 missing prototypes
        * rc_dfl.h: added 2 missing prototypes

Tue Feb 28 01:03:34 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Dec 22 15:44:50 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add test for uid_t.

Fri Oct 14 23:12:00 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add ISODE_DEFS rule.

Mon Oct  3 19:32:59 1994  Theodore Y. Ts'o  (tytso@dcl)

	* rc_def.c (krb5_rc_dfl_recover): krb5_rc_io_size was being called
		(still) with the wrong type argument.  Should have been &t->d.

Fri Sep 30 21:59:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* rc_def.c (krb5_rc_dfl_ops): Add placeholder for magic number

Thu Sep 29 22:11:20 1994  Theodore Y. Ts'o  (tytso@dcl)

	* rc_dfl.c (krb5_rc_dfl_recover): krb5_rc_io_size was being called