@@ -1,3 +1,13 @@
+Fri Mar 31 16:44:34 1995  Theodore Y. Ts'o  (tytso@dcl)
+
+	* rc_dfl.c (krb5_rc_dfl_expunage): Close the old, temporary reply
+		cache after we're done expunging it.
+
+	* rc_io.c (krb5_rc_io_move): Make duplicate copies of the filename
+		and the file descriptor (via malloc/strcpy and dup), so
+		that the old rc_io object can be cleanly closed without
+		affecting the new rc_io object.
+
 Fri Mar 17 20:27:41 1995  John Gilmore  (gnu at toad.com)
 
 	* Makefile.in (LDFLAGS):  Eliminate duplicate of config/pre.in.
